# open-dart

./: .gitignore  Cargo.toml  DESIGN-DECISIONS.md  README.md  justfile
.config/: nextest.toml
.github/workflows/: check.yml  scheduled.yml  test.yml
derive-const/: Cargo.toml
derive-const/src/: lib.rs
derive-const/tests/: base.rs  main.rs
examples/: get_company.rs  get_corp_codes.rs  get_fnltt_singl_acnt_all.rs  get_list.rs  simple.rs
generate-consts/: Cargo.toml
generate-consts/src/: lib.rs
generate-consts/tests/: base.rs
src/: client.rs  config.rs  endpoints.rs  env.rs  error.rs  lib.rs  static.rs  statics.rs  test_utils.rs  types.rs  utils.rs  validate.rs
src/docs/: bgn_de.md  bsns_year.md  corp_cls.md  corp_code.md  corp_name.md  crtfc_key.md  end_de.md  fs_div.md  last_reprt_at.md  page_count.md  page_no.md  pblntf_detail_ty.md  pblntf_ty.md  reprt_code.md  sort.md  sort_mth.md
src/endpoints/: base.rs  company.rs  corp_code.rs  corp_code_meta.rs  corp_codes.rs  fnltt_multi_acnt.rs  fnltt_singl_acnt_all.rs  list.rs  macros.rs  mod.rs
src/test_utils/: context.rs  function_id.rs  mock.rs  tracing.rs
src/types/: PageNo.rs  acc_mt.rs  account_id.rs  alias.rs  bgn_de.rs  bizr_no.rs  bsns_year.rs  corp_cls.rs  corp_code.rs  corp_name.rs  crtfc_key.rs  date.rs  digits.rs  end_de.rs  fs_div.rs  industry_code.rs  jurir_no.rs  mytext.rs  number.rs  page_count.rs  page_no.rs  pblntf_detail_ty.rs  pblntf_ty.rs  report_nm.rs  reprt_code.rs  sj_div.rs  sort.rs  sort_mth.rs  stock_code.rs  text.rs  yes_no.rs
src/validate/: fields.rs  utils.rs
test-variants/: Cargo.toml
test-variants/src/: lib.rs
test-variants/tests/: base.rs  main.rs
tests/: chrono.rs  derive_more.rs  serde.rs
tests/golden/: client-tests-get_list_default.json
tests/resources/: test_get_list_default.json
tests/resources/golden/: corp_infos.xml  open_dart-client-tests-get_list_default.json  open_dart-endpoints-company-tests-get_company_default.json  open_dart-endpoints-company-tests-get_should_fail_when_receiving_dart_message_code_other_than_000.json  open_dart-endpoints-corp_code-tests-get_corp_code_works.json  open_dart-endpoints-fnltt_singl_acnt_all-tests-get_fnltt_singl_acnt_all.json  open_dart-endpoints-list-tests-get_list_default.json
