[workspace]
members = ["generate-consts"]

[package]
name = "open-dart"
version = "0.0.1"
edition = "2021"

[dependencies]
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel-derive-newtype = { version = "2.1.2", optional = true }
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["as_ref", "display", "from", "from_str", "into"] }
generate_consts = { path = "generate-consts" }
nutype = { version = "0.5.0", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
static_assertions = "1.1.0"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
goldrust = "0.1.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wiremock = "0.6.2"

[features]
diesel = ["diesel-derive-newtype"]