[package]
name = "derive-const"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
proc-macro2 = "1.0.86"
syn = { version = "2.0.77", features = ["extra-traits", "full"] }
quote = "1.0.37"

[dev-dependencies]
trybuild = "1.0.99"