[package]
name = "generate_consts"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.77", features = ["parsing"] }
quote = "1.0.37"

[dev-dependencies]
trybuild = "1.0.99"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
derive_more = { version = "1.0.0", features = ["as_ref", "display"] }